--- a/project1/index.html
+++ b/project1/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello world</h1>
+    <div class="container">
+        <div class="card">
+            <img src="images/1000_F_234306614_BC3agXARJdayjhfrUwgUklpHusXiIBtK.jpg">
+            <h2>Improve your front end skills buy developing Projects</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia, enim. Repellendus, non! Itaque omnis vero ullam nobis architecto assumenda, distinctio pariatur officiis delectus placeat</p>
+        </div>
+    </div>
 </body>
 </html>
