--- a/project1/project22/index.html
+++ b/project1/project22/index.html
@@ -1,20 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Graphic Design Website</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    <div class="container">
-        <div class="item header">header</div>
-        <div class="item slidebar">slidebar</div>
-        <div class="item content1">content1</div>
-        <div class="item content2">content2</div>
-        <div class="item content3">content3</div>
-        <div class="item footer">footer</div>
+    <nav>
+        <h3>Now to Usabillity Open and Closed card sorting.</h3>
+    </nav>
+    <div class="nav_item">
+        <h2 class="heading1">UsabilityHub</h2>
+        <ul class="items">
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Customers</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Resources</a></li>
+        </ul>
+        <button class="btn1">Sing in</button>
+        <button class="btn2">Sing up</button>
     </div>
-    
+    <main>
+        <div class="content">
+            <h2 class="heading2">Design confidently.</h2>
+            <p class="para1">Usability is a remote user reserach platform that takes the guesswork out of design
+                decision by vaildating them with real users. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quasi, distinctio?</p>
+            <button class="btn3">Get Started</button>
+        </div>
+        <div class="image_item">
+            <img src="image/web-design-hero1.webp" alt="">
+        </div>
+    </main>
+    <div class="main_content">
+        <p>The world's best comapanies rely on UsabilityHub to make better design decisions.</p>
+    </div>
+    <div class="image-item">
+        <img src="image/amazon-logo-s3f.png" alt="Amazon-Logo" class="image1">
+        <img src="image/google.png" alt="goggle" class="image2">
+        <img src="image/taskrabbit.png" alt="taskrabbit" class="image3">
+        <!-- <img src="image/Box-01.png" alt="airtable" class="image4"> -->
+        <img src="image/eyJidWNrZXQiOiJwYXJ0bmVycGFnZS5wcm9kIiwia2V5IjoibWVkaWEvbG9nby8xODI4MTRlNC05M2UwLTQ3ZDktYmIyMy0zNzAwNTQ0YjU3YTgvZjk2MjU1MDktNDJjOS00MTgzLWIwMWMtNmY5MDUxNzA3MDA0LnBuZyIsImVkaX.webp"
+            alt="air" class="image5">
+        <img src="image/Go-Daddy_G59zobB.png" alt="daddy" class="image6">
+    </div>
+    <div class="hero">
+        <h2 class="heading3">Your user Research Swiss Army Knife</h2>
+        <button class="btn4">See all features</button>
+    </div>
+    <div class="card_section">
+        <div class="card_container">
+            <div class="card_item">
+                <img src="image/coloured-arrow.jpg" alt="arrow">
+            </div>
+            <div class="card_content">
+                <h3 class="heading4">Card sorting</h3>
+                <p class="para2">Discover how people group and label information.</p>
+                <button class="btn4">Learn more</button>
+            </div>
+        </div>
+        <div class="card_container">
+            <div class="card_item">
+                <img src="image/graphics-card-2104246_640.webp" alt="arrow">
+            </div>
+            <div class="card_content">
+                <h3 class="heading4">Prototype tests</h3>
+                <p class="para2">Discover how people navigate your Figma prototypes.</p>
+                <button class="btn4">Learn more</button>
+            </div>
+        </div>
+        <!-- </div> -->
+        <div class="card_container">
+            <div class="card_item">
+                <img src="image/pink-arrow-left.webp" alt="arrow">
+            </div>
+            <div class="card_content">
+                <h3 class="heading4">First click tests</h3>
+                <p class="para2">Test interaction with first click and navigation tests.</p>
+                <button class="btn4">Learn more</button>
+            </div>
+        </div>
+        <!-- </div> -->
+        <!-- </div> -->
+        <div class="card_container">
+
+            <div class="card_item">
+                <img src="image/3f967d6c-8676-4f38-afb9-d667a51b4cd1.avif" alt="arrow" class="image_4">
+            </div>
+            <div class="card_content">
+                <h3 class="heading4">Design surveys</h3>
+                <p class="para2">Get feedback on images,videos or audio files.</p>
+                <button class="btn4">Learn more</button>
+            </div>
+        </div>
+        <div class="card_container">
+            <div class="card_item">
+                <img src="image/forward-arrows-vector-icon-png_295040.jpg" alt="arrow">
+            </div>
+            <div class="card_content">
+                <h3 class="heading4">Preference tests</h3>
+                <p class="para2">Find out which designs users prefer and why.</p>
+                <button class="btn4">Learn more</button>
+            </div>
+        </div>
+        <!-- </div> -->
+        <div class="card_container">
+            <div class="card_item">
+                <img src="image/material-icon-1307676_960_720.webp" alt="arrow" class="image_6">
+            </div>
+            <div class="card_content">
+                <h3 class="heading4">Five second tests</h3>
+                <p class="para2">Test comprehenibillity by measuring first impression.</p>
+                <button class="btn4">Learn more</button>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="main_container">
+        <img src="image/female-graphic-designer-working-laptop_1005511-732.avif" alt="female">
+        <div class="content-item">
+            <p class="para3">Effortless validation for</p>
+            <h3 class="heading5">Design professionals</h3>
+            <p class="para4">Text interfaces,interaction flows,iconography and moer,to help you create intutive and
+                delightful experiences for your users. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore,
+                deserunt?</p>
+        </div>
+    </div>
+    <div class="main_container">
+        <div class="content-item">
+            <p class="para3">Effortless validation for</p>
+            <h3 class="heading5">Design professionals</h3>
+            <p class="para4">Text interfaces,interaction flows,iconography and moer,to help you create intutive and
+                delightful experiences for your users. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore,
+                deserunt?</p>
+        </div>
+        <img src="image/graphic-designer-creating-his-artwork-vector-flat-isometric-illustration-using-computer-software-sitting-desk-digital-artist-186006853.webp"
+            alt="man" class="img1">
+    </div>
+    <div class="main_container">
+        <img src="image/design-tools-concept-illustration_114360-1227.avif" alt="design">
+        <div class="content-item">
+            <p class="para3">Effortless validation for</p>
+            <h3 class="heading5">Design professionals</h3>
+            <p class="para4">Text interfaces,interaction flows,iconography and moer,to help you create intutive and
+                delightful experiences for your users. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore,
+                deserunt?</p>
+        </div>
+    </div>
+    <div class="item_container">
+        <h2 class="heading6">One platform,endless possibillities</h2>
+        <button class="btn4">See more examples</button>
+    </div>
+    <footer>
+        <p class="para5">Start testing today</p>
+        <p class="para6">Take the guesswork out of design decision</p>
+        <button class="btn5">Get Started</button>
+    </footer>
+    <div class="footer_item">
+        <h3 class="heading7">UsabilityHub</h3>
+        <div class="item1">
+            <p class="para7">Product</p>
+            <ul>
+                <li><a href="#">Overview</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">UsabilityHub ponel</a></li>
+                <li><a href="#">Customers</a></li>
+                <li><a href="#">Status page</a></li>
+            </ul>
+        </div>
+        <div class="item1">
+            <p class="para7">Methodology</p>
+            <ul>
+                <li><a href="#">Overview</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">UsabilityHub ponel</a></li>
+                <li><a href="#">Customers</a></li>
+                <li><a href="#">Status page</a></li>
+            </ul>
+        </div>
+        <div class="item1">
+            <p class="para7">Resources</p>
+            <ul>
+                <li><a href="#">Overview</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">UsabilityHub ponel</a></li>
+                <li><a href="#">Customers</a></li>
+                <li><a href="#">Status page</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="sub_footer">
+        <p>Privacy policy</p>
+        <p>Terms & Condiction</p>
+        <p>Security Information</p>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-square-instagram"></i>
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-twitter"></i>
+
+    </div>
+
+
 </body>
+
 </html>
